--- a/hinata.html
+++ b/hinata.html
@@ -34,7 +34,7 @@
 	</ul></div>
 	<br class="br1">
 	<center><h1 class="judul">日向坂４６<br>
-	hinatazaka46</h1><br>
+	Hinatazaka46</h1><br>
 	<img src="doremi.jpg" height="360" height="240"></center>
 	<br><br>
 <center><table border="0" class="konten">
