--- a/hinata.html
+++ b/hinata.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>日向坂46(Hinatazaka46) - makunadoru</title>
+	<title>日向坂46(hinatazaka46) - makunadoru</title>
 	<link rel="stylesheet" href="style.css">
 	<style type="text/css">
 		h1{
@@ -33,7 +33,7 @@
 	</ul></div>
 	<br class="br1">
 	<center><h1 class="judul">日向坂４６<br>
-	Hinatazaka46</h1><br>
+	hinatazaka46</h1><br>
 	<img src="doremi.jpg" height="360" height="240"></center>
 	<br><br>
 <center><table border="0" class="konten">
