--- a/hinata.html
+++ b/hinata.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>日向坂46(hinatazaka46) - makunadoru</title>
+	<title>日向坂46(Hinatazaka46) - makunadoru</title>
 	<link rel="stylesheet" href="style.css">
 	<style type="text/css">
 		h1{
