--- a/maknalirik.html
+++ b/maknalirik.html
@@ -25,6 +25,8 @@
 	<ul>
 		<a href="maknakuroihitsuji.html" class="katakotak1"><li class="kotak1"><img src="kuroihitsujibulet.png" height="240" width="240"><br>
 			<h2>黒い羊の意味</h2></li></a>
+		<a href="maknalirikgarasu.html" class="katakotak1"><li class="kotak1"><img src="garasubulet.png" height="240" width="240"><br>
+			<h2>ガラスを割れ!の意味</h2></li></a>
 	</ul></div>
 
 
