--- a/maknalirikgarasu.html
+++ b/maknalirikgarasu.html
@@ -50,8 +50,8 @@
 飼い慣らされたんだろう<br></td></tr></table>
 この歌詞では、飼い慣らされた「犬」を紹介しています。犬でさえ、噛む欲求を忘れているか、失いました。 「飼いならされた」は普通のようで、積極的な意味合いを持っているように見えますが、この曲では、ここで「飼いならされた」とは「抑制された」と同じ意味であるため、否定的な意味合いがあります。<br>
 <br>
-今あるしあわせにどうしてしがみつくんだ?<br>
-閉じ込められた見えない檻から抜け出せよ<br>
+		<td class="kontendalam">000</td><td>今あるしあわせにどうしてしがみつくんだ?<br>
+閉じ込められた見えない檻から抜け出せよ<br></td></tr></table>
 この歌詞では、「今あるしゃわせ」が意味するものは本当に幸せではないので、「犬」が満足して欲張りではないというわけではありません。 しかし、「抑制されることによって作成されるしあわせ」は、もしそうなら、抑制され、彼の自由が奪われても幸せを感じることを意味します。 したがって、目に見えない閉じ込めを破りましょう。
 たとえば、友達やサークルがあります。 アイドルが好きや、Petaiを食べるのが好き、または本当に普通の物。 しかし、あなたの「友人」はアイドルが好きではないとを食べるのが好きではないので、あなたは「友人」の生活に合った幸せを探し続け、「アイドルが好きではなくてもPetaiを食べなくても幸せだ」と感じます。 あなたは抑制されることによって作成されるしあわせ、見えないケージから得られた幸福を感じました。 したがって、あなたの本当の幸せを達成することを恐れないでください。<br>
 <br>
