--- a/maknalirikgarasu.html
+++ b/maknalirikgarasu.html
@@ -52,8 +52,8 @@
 <br>
 <table border="0">
 	<tr>
-		<td class="kontendalam">000</td><td>今あるしあわせにどうしてしがみつくんだ?<br>
-閉じ込められた見えない檻から抜け出せよ<br></td></tr></table>
+		今あるしあわせにどうしてしがみつくんだ?<br>
+閉じ込められた見えない檻から抜け出せよ<br>
 この歌詞では、「今あるしゃわせ」が意味するものは本当に幸せではないので、「犬」が満足して欲張りではないというわけではありません。 しかし、「抑制されることによって作成されるしあわせ」は、もしそうなら、抑制され、彼の自由が奪われても幸せを感じることを意味します。 したがって、目に見えない閉じ込めを破りましょう。
 たとえば、友達やサークルがあります。 アイドルが好きや、Petaiを食べるのが好き、または本当に普通の物。 しかし、あなたの「友人」はアイドルが好きではないとを食べるのが好きではないので、あなたは「友人」の生活に合った幸せを探し続け、「アイドルが好きではなくてもPetaiを食べなくても幸せだ」と感じます。 あなたは抑制されることによって作成されるしあわせ、見えないケージから得られた幸福を感じました。 したがって、あなたの本当の幸せを達成することを恐れないでください。<br>
 <br>
