--- a/maknalirik.html
+++ b/maknalirik.html
@@ -23,6 +23,10 @@
 <br><br>
 	<div class="kontenidol">
 	<ul>
+		<a href="maknalirikkazeni.html" class="katakotak1"><li class="kotak1"><img src="kazenibulet.png" height="240" width="240"><br>
+			<h2>風に吹かれてもの意味</h2></li></a>
+	</ul>
+	<ul>
 		<a href="maknakuroihitsuji.html" class="katakotak1"><li class="kotak1"><img src="kuroihitsujibulet.png" height="240" width="240"><br>
 			<h2>黒い羊の意味</h2></li></a>
 	</ul>
