--- a/hinata.html
+++ b/hinata.html
@@ -28,7 +28,7 @@
 		<a href="idol.html" class="katamenu"><li class="aktif">アイドル</li></a>
 		<a href="lirik.html" class="katamenu"><li class="aktif">作詞</li></a>
 		<a href="maknalirik.html" class="katamenu"><li class="aktif">作詞の意味</li></a>
-		<a href="#" class="katamenu"><li class="aktif">makunadoru?</li></a>
+		<a href="makunadoru.html" class="katamenu"><li class="aktif">makunadoru?</li></a>
 
 	</ul></div>
 	<br class="br1">
