--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div class="menu">
 	<ul>
 		<a href="menu2.html" class="katamenu"><li class="aktif">ホーム</li></a>
-		<a href="#" class="katamenu"><li class="aktif">makunadoru?</li></a>
+		<a href="makunadoru.html" class="katamenu"><li class="aktif">makunadoru?</li></a>
 	</ul></div><br><br>
 	<div class="kontenhome">
 	<ul>
