--- a/makunadoru.html
+++ b/makunadoru.html
@@ -36,7 +36,7 @@
 	<table class="kontenlirik">
 		<tr>
 			<td>
-			makunadoruは"Makna Lagu Idol(makuna ragu aidoru)"からを作りました。テーマはアイドルソングの意味を議論についてサイトです。<br><br>
+			makunadoruは"Makna Lagu Idol(makuna ragu aidoru)"からを作りました。テーマはアイドルソングの意味と議論についてサイトです。<br><br>
 			なぜmakunadoruを作りましたか？多くのサイトは歌の歌詞に意味を与えているが、歌にはほとんど意義を与えていないからです。 アイドルソングが重要な意義とか深い意味を持っているのかどうか知りたいです<br>
 			このサイトで、人々がアイドルソングのをよりよく理解できることを願っています。そして、そのアイドルをもっともっと応援しています<br>
 			<br>
