--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 		<a href="idol.html" class="katakotak1"><li class="kotak1"><img src="nogibulet.png" height="240" width="240"><br>
 			<h2>アイドル</h2></li></a>
 		<a href="lirik.html" class="katakotak1"><li class="kotak1"><img src="kuroihitsujibulet.png" height="240" width="240"><br>
-			<h2>作詞</h2></li></a>
+			<h2>歌詞</h2></li></a>
 		<a href="maknalirik.html" class="katakotak1"><li class="kotak1"><img src="kurobulet.png" height="240" width="240"><br>
-			<h2>作詞の意味</h2></li></a>
+			<h2>歌詞の意味</h2></li></a>
 	</ul></div>
 
 
