--- a/maknalirikgarasu.html
+++ b/maknalirikgarasu.html
@@ -26,8 +26,8 @@
 	<ul>
 		<a href="index.html" class="katamenu"><li class="aktif">ホーム</li></a>
 		<a href="idol.html" class="katamenu"><li class="aktif">アイドル</li></a>
-		<a href="lirik.html" class="katamenu"><li class="aktif">作詞</li></a>
-		<a href="maknalirik.html" class="katamenu"><li class="aktif">作詞の意味</li></a>
+		<a href="lirik.html" class="katamenu"><li class="aktif">歌詞</li></a>
+		<a href="maknalirik.html" class="katamenu"><li class="aktif">歌詞の意味</li></a>
 		<a href="makunadoru.html" class="katamenu"><li class="aktif">makunadoru?</li></a>
 
 	</ul></div><br>
