--- a/nogi.html
+++ b/nogi.html
@@ -33,13 +33,117 @@
 	<table class="konten">
 		<tr>
 			<td>
-				AKB48公式ライバルとして結成したアイドルグループです。<br><br>
+				乃木坂46の作った理由はAKB48の公式ライバルとして結成したアイドルグループです。「乃木坂」の由来に関しては、最終オーディション会場の「SME乃木坂ビル」からです。AKB48より人数が少ないので「46」になっています。<br>
+				2012年2月15日で「ぐるぐるカーテン」というデビューシングルは2012年2月15日、デビューシングル「ぐるぐるカーテン」が発売されました。<br>
+				<br>
+ 				乃木坂46のメンバー：<br>
+				1期生：<br>
+			<div class="kontenmember">
+				<ul>
+					<li><a title="Akimoto Manatsu"><img src="http://stage48.net/wiki/images/thumb/8/82/AkimotoKaerimichi.jpg/110px-AkimotoKaerimichi.jpg" width="110" height="133" /></a><br>
+					秋元 真夏</li>
+					<li><a title="Ikuta Erika"><img src="http://stage48.net/wiki/images/thumb/1/1a/IkutaKaerimichi.jpg/110px-IkutaKaerimichi.jpg" width="110" height="133" /></a><br>
+					生田絵梨花</li>
+					<li><a title="Inoue Sayuri"><img src="http://stage48.net/wiki/images/thumb/1/17/InoueKaerimichi.jpg/110px-InoueKaerimichi.jpg" width="110" height="133" /></a><br>
+					井上 小百合</li>
+					<li><a title="Saitou Asuka"><img src="http://stage48.net/wiki/images/thumb/4/4d/SaitoAsukaKaerimichi.jpg/110px-SaitoAsukaKaerimichi.jpg" width="110" height="133" /></a><br>
+					齋藤 飛鳥</li>
+					<li><a title="Shiraishi Mai"><img src="http://stage48.net/wiki/images/thumb/a/a5/ShiraishiKaerimichi.jpg/110px-ShiraishiKaerimichi.jpg" width="110" height="133" /></a><br>
+					白石 麻衣</li>
+					<li><a title="Takayama Kazumi"><img src="http://stage48.net/wiki/images/thumb/3/34/TakayamaKaerimichi.jpg/110px-TakayamaKaerimichi.jpg" width="110" height="133" /></a><br>
+					高山 一実</li>
+					<li><a title="Nakada Kana"><img src="http://stage48.net/wiki/images/thumb/3/31/NakadaKaerimichi.jpg/110px-NakadaKaerimichi.jpg" width="110" height="133" /></a><br>
+					中田 花奈</li>
+					<li><a title="Higuchi Hina"><img src="http://stage48.net/wiki/images/thumb/f/fd/HiguchiKaerimichi.jpg/110px-HiguchiKaerimichi.jpg" width="110" height="133" /></a><br>
+					樋口 日奈</li></ul><ul>
+					<li><a title="Hoshino Minami"><img src="http://stage48.net/wiki/images/thumb/a/a4/HoshinoKaerimichi.jpg/110px-HoshinoKaerimichi.jpg" width="110" height="133" /></a><br>
+					星野 みなみ</li>
+					<li><a title="Matsumura Sayuri"><img src="http://stage48.net/wiki/images/thumb/a/a9/MatsumuraKaerimichi.jpg/110px-MatsumuraKaerimichi.jpg" width="110" height="133" /></a><br>
+					松村 沙友理</li>
+					<li><a title="Wada Maaya"><img src="http://stage48.net/wiki/images/thumb/3/32/WadaKaerimichi.jpg/110px-WadaKaerimichi.jpg" width="110" height="133" /></a><br>
+					和田 まあや</li>
+				</ul>
+			</div>
 
-グループ名の「乃木坂」は、最終オーディション会場の「SME乃木坂ビル」に由来します。<br><br>
-「46」の由来に関しては、「AKB48より人数が少なくても負けないという意気込み（秋元康氏）」から。<br><br>
-
-読み方は”ノギザカフォーティーシックス”。また、メンバーは全国規模のオーディションにより、<br><br>
-38,934人の応募の中から選ばれました。<br><br>
+				2期生：<br>
+				<div class="kontenmember">
+				<ul>
+					<li><a title="Ito Junna"><img src="http://stage48.net/wiki/images/thumb/3/3b/ItoJunnaKaerimichi.jpg/110px-ItoJunnaKaerimichi.jpg" width="110" height="133" /></a><br>
+					伊藤 純奈</li>
+					<li><a title="Kitano Karin"><img src="http://stage48.net/wiki/images/thumb/1/18/KitanoKaerimichi.jpg/110px-KitanoKaerimichi.jpg" width="110" height="133" /></a><br>
+					北野 日奈子</li>
+					<li><a title="Sasaki Kotoko"><img src="http://stage48.net/wiki/images/thumb/c/c5/SasakiKaerimichi.jpg/110px-SasakiKaerimichi.jpg" width="110" height="133" /></a><br>
+					佐々木 琴子</li>
+					<li><a title="Shinuchi Mai"><img src="http://stage48.net/wiki/images/thumb/6/64/ShinuchiKaerimichi.jpg/110px-ShinuchiKaerimichi.jpg" width="110" height="133" /></a><br>
+					新内 眞衣</li>
+					<li><a title="Suzuki Ayane"><img src="http://stage48.net/wiki/images/thumb/9/94/SuzukiKaerimichi.jpg/110px-SuzukiKaerimichi.jpg" width="110" height="133" /></a><br>
+					鈴木 絢音</li>
+					<li><a title="Terada Ranze"><img src="http://stage48.net/wiki/images/thumb/e/ea/TeradaKaerimichi.jpg/110px-TeradaKaerimichi.jpg" width="110" height="133" /></a><br>
+					寺田 蘭世</li>
+					<li><a title="Hori Miona"><img src="http://stage48.net/wiki/images/thumb/7/74/HoriKaerimichi.jpg/110px-HoriKaerimichi.jpg" width="110" height="133" /></a><br>
+					堀 未央奈</li>
+					<li><a title="Yamazaki Rena"><img src="http://stage48.net/wiki/images/thumb/7/76/YamazakiKaerimichi.jpg/110px-YamazakiKaerimichi.jpg" width="110" height="133" /></a><br>
+					山崎 怜奈</li></ul><ul>
+					<li><a title="Watanabe Miria"><img src="http://stage48.net/wiki/images/thumb/d/d4/WatanabeKaerimichi.jpg/110px-WatanabeKaerimichi.jpg" width="110" height="133" /></a><br>
+					渡辺 みり愛</li>
+				</ul>
+				</div>
+				3期生：<br>
+				<div class="kontenmember">
+				<ul>
+					<li><a title="Ito Riria"><img src="http://stage48.net/wiki/images/thumb/e/ee/ItoRiriaKaerimichi.jpg/110px-ItoRiriaKaerimichi.jpg" width="110" height="133" /></a><br>
+					伊藤 理々杏</li>
+					<li><a title="Iwamoto Renka"><img src="http://stage48.net/wiki/images/thumb/5/56/IwamotoKaerimichi.jpg/110px-IwamotoKaerimichi.jpg" width="110" height="133" /></a><br>
+					岩本 蓮加</li>
+					<li><a title="Umezawa Minami"><img src="http://stage48.net/wiki/images/thumb/7/7e/UmezawaKaerimichi.jpg/110px-UmezawaKaerimichi.jpg" width="110" height="133" /></a><br>
+					梅澤 美波</li>
+					<li><a title="Ozono Momoko"><img src="http://stage48.net/wiki/images/thumb/7/72/OzonoKaerimichi.jpg/110px-OzonoKaerimichi.jpg" width="110" height="133" /></a><br>
+					大園 桃子</li>
+					<li><a title="Kubo Shiori"><img src="http://stage48.net/wiki/images/thumb/b/bc/KuboKaerimichi.jpg/110px-KuboKaerimichi.jpg" width="110" height="133" /></a><br>
+					久保 史緒里</li>
+					<li><a title="Sakaguchi Tamami"><img src="http://stage48.net/wiki/images/thumb/9/99/SakaguchiKaerimichi.jpg/110px-SakaguchiKaerimichi.jpg" width="110" height="133" /></a><br>
+					阪口 珠美</li>
+					<li><a title="Sato Kaede"><img src="http://stage48.net/wiki/images/thumb/2/27/SatoKaerimichi.jpg/110px-SatoKaerimichi.jpg" width="110" height="133" /></a><br>
+					佐藤 楓</li>
+					<li><a title="Nakamura Reno"><img src="http://stage48.net/wiki/images/thumb/e/e1/NakamuraKaerimichi.jpg/110px-NakamuraKaerimichi.jpg" width="110" height="133" /></a><br>
+					中村 麗乃</li></ul><ul>
+					<li><a title="Mukai Hazuki"><img src="http://stage48.net/wiki/images/thumb/9/9b/MukaiKaerimichi.jpg/110px-MukaiKaerimichi.jpg" width="110" height="133" /></a><br>
+					向井 葉月</li>
+					<li><a title="Yamashita Mizuki"><img src="http://stage48.net/wiki/images/thumb/7/78/YamashitaKaerimichi.jpg/110px-YamashitaKaerimichi.jpg" width="110" height="133" /></a><br>
+					山下 美月</li>
+					<li><a title="Yoshida Ayano Christie"><img src="http://stage48.net/wiki/images/thumb/e/e8/YoshidaKaerimichi.jpg/110px-YoshidaKaerimichi.jpg" width="110" height="133" /></a><br>
+					吉田 綾乃クリスティー</li>
+					<li><a title="Yoda Yuki"><img src="http://stage48.net/wiki/images/thumb/0/0a/YodaKaerimichi.jpg/110px-YodaKaerimichi.jpg" width="110" height="133" /></a><br>
+					与田 祐希</li>
+				</ul>
+				</div>
+				4期生：<br>
+				<div class="kontenmember">
+				<ul>
+					<li><a title="Endo Sakura"><img src="http://stage48.net/wiki/images/thumb/f/ff/EndoDebut.jpg/110px-EndoDebut.jpg" width="110" height="133" /></a><br>
+					遠藤 さくら</li>
+					<li><a title="Kaki Haruka"><img src="http://stage48.net/wiki/images/thumb/8/85/KakiDebut.jpg/110px-KakiDebut.jpg" width="110" height="133" /></a><br>
+					賀喜 遥香</li>
+					<li><a title="Kakehashi Sayaka"><img src="http://stage48.net/wiki/images/thumb/0/0b/KakehashiDebut.jpg/110px-KakehashiDebut.jpg" width="110" height="133" /></a><br>
+					掛橋 沙耶香</li>
+					<li><a title="Kanagawa Saya"><img src="http://stage48.net/wiki/images/thumb/1/19/KanagawaDebut.jpg/110px-KanagawaDebut.jpg" width="110" height="133" /></a><br>
+					金川 紗耶</li>
+					<li><a title="Kitagawa Yuri"><img src="http://stage48.net/wiki/images/thumb/7/71/KitagawaDebut.jpg/110px-KitagawaDebut.jpg" width="110" height="133" /></a><br>
+					北川 悠理</li>
+					<li><a title="Shibata Yuna"><img src="http://stage48.net/wiki/images/thumb/9/9f/ShibataDebut.jpg/110px-ShibataDebut.jpg" width="110" height="133" /></a><br>
+					柴田 柚菜</li>
+					<li><a title="Seimiya Rei"><img src="http://stage48.net/wiki/images/thumb/2/21/SeimiyaDebut.jpg/110px-SeimiyaDebut.jpg" width="110" height="133" /></a><br>
+					清宮 レイ</li>
+					<li><a title="Tamura Mayu"><img src="http://stage48.net/wiki/images/thumb/9/9b/TamuraDebut.jpg/110px-TamuraDebut.jpg" width="110" height="133" /></a><br>
+					田村 真佑</li></ul><ul>
+					<li><a title="Tsutsui Ayame"><img src="http://stage48.net/wiki/images/thumb/2/2e/TsutsuiDebut.jpg/110px-TsutsuiDebut.jpg" width="110" height="133" /></a><br>
+					筒井 あやめ</li>
+					<li><a title="Hayakawa Seira"><img src="http://stage48.net/wiki/images/thumb/d/d9/HayakawaDebut.jpg/110px-HayakawaDebut.jpg" width="110" height="133" /></a><br>
+					早川 聖来</li>
+					<li><a title="Yakubo Mio"><img src="http://stage48.net/wiki/images/thumb/e/e0/YakuboDebut.jpg/110px-YakuboDebut.jpg" width="110" height="133" /></a><br>
+					矢久保 美緒</li>
+				</ul>
+				</div>
 
 			<h4><a href="https://www.nogizaka46.com" class="katanogi">GO TO NOGIZAKA46 SITE</a></h4>
 			</td>
