--- a/nogi.html
+++ b/nogi.html
@@ -34,7 +34,7 @@
 		<tr>
 			<td>
 				乃木坂46の作った理由はAKB48の公式ライバルとして結成したアイドルグループです。「乃木坂」の由来に関しては、最終オーディション会場の「SME乃木坂ビル」からです。AKB48より人数が少ないので「46」になっています。<br>
-				2012年2月15日で「ぐるぐるカーテン」というデビューシングルは2012年2月15日、デビューシングル「ぐるぐるカーテン」が発売されました。<br>
+				2012年2月15日で「ぐるぐるカーテン」というデビューシングルが発売されました。<br>
 				<br>
  				乃木坂46のメンバー：<br>
 				1期生：<br>
