--- a/hinata.html
+++ b/hinata.html
@@ -39,135 +39,64 @@
 <center><table border="0" class="konten">
 	<tr>
 		<td>	
-■日向坂46（ひなたざかふぉーてぃーしっくす）
-
- <br><br>
-
-秋元康総合プロデュース。
-<br>
-2015年8月21日、乃木坂46に続く坂道シリーズ第2弾として、欅坂46（けやきざかふぉーてぃーしっくす）が誕生。その最終審査への切符を手に入れた通過者のひとり、長濱ねるは、審査当日の朝、アイドル活動に難色を示していた母親に地元・長崎へと連れ戻されてしまう。最終オーディションは長濱のNo.「17番」を空席のまま審査を実施した。
-<br>
- <br>
-
-その夜、泣き続ける娘を見た父親が運営に連絡、運営は父親の想いを汲み、ご家族を翌日の乃木坂46全国ツアー福岡公演にご招待する。その日の乃木坂46のライブは母親も含めて大絶賛、長濱ねるのアイドルへの想いは強くなり、奇妙な運命をたどりながら、欅坂46への追加加入が検討され始める。
-
- <br>
-<br>
-一方、欅坂46は、10月から早くもレギュラー番組「欅って、書けない？」が開始される。
-
-結成から3ヶ月が経った11月30日の放送にて、メンバーの追加加入が発表、長濱ねるが初登場する。
-
- <br><br>
-
-その番組内で、漢字の「欅坂」ではない、ひらがなの「けやき坂」が新設され、まずは「けやき坂46」として活動を始める事が発表された。長濱1人メンバーによる「けやき坂46（以下、ひらがなけやき）」が結成された瞬間である。そして「新しく長濱ねるの仲間を集めよう」とメンバー募集が開始。
-
- <br><br>
-
-2016年5月8日にオーディションにより選ばれた11名の合格者と長濱ねるの12名で、ひらがなけやきの活動は始まった。
-
- <br><br>
-
-6月26日の「欅って、書けない？」にて、2ndシングル「世界には愛しかない」の選抜発表で、長濱ねるが選抜入り、漢字欅とひらがなけやきの兼任メンバーとなる。
-<br>
- <br>
-
-ひらがなけやきは、このシングルのカップリング曲として「ひらがなけやき」が初めての楽曲として収録された。以降、各シングルのカップリング曲として楽曲が収録されるもまだまだ認知されず、人気急上昇中の漢字欅に比べて後塵を拝する日々が続いた。
-
- <br>
-<br>
-10月28日、初の単独イベント「ひらがなおもてなし会」を赤坂BLITZにて開催、少しずつ個性がみえるようになると徐々に人気も定着し始める。
-<br>
- <br>
-
-2017年に入ると欅坂46より先に全国ツアーの開催が決定、3月22日のZepp Tokyoを皮切りに、「ひらがな全国ツアー2017」と銘打ち全国ツアーが決定。
-
- <br>
-<br>
-4月6日、欅坂46デビュー1周年のアニバーサリーライブが代々木第一体育館にて開催、そこで「ひらがなけやきパワーアップ計画」と題して、メンバーの追加募集が発表された。6月からメンバーが募集され、8月13日に合格者9名を選出。ひらがなけやき二期生としてレッスンを開始した。
-
- <br><br>
-
-ひらがなけやきの活動がさかんになるにつれ、漢字欅と兼任である長濱のスケジュールは多忙を極め、ツアー初日のZepp Tokyoは当日までリハーサルが出来ない状態であった。
-
- <br><br>
-
-その後も5月に大阪公演、7月には名古屋公演と続いたが、長濱の多忙はピークを迎え、9月25日、体調面を考慮して長濱の兼任を解除、欅坂46専任になる事が運営から発表された。「ひらがな全国ツアー2017」Zepp Sapporo公演前日の出来事だった。
-
- <br><br>
-
-残された11人のメンバーは、失意の中、翌日の札幌公演に臨むが、思いもよらぬ暖かい声援に勇気をもらい、持ち味であるパワフルなステージングとピースフルなパフォーマンスでオーディエンスを魅了。この札幌公演は、メンバーにとって忘れられない再出発の門出となった。
-<br>
- <br>
-
-ここからひらがなけやきの快進撃が始まる。。。
-<br>
- <br>
-
-10月クールから、けやき坂46初主演・主題歌のテレビ東京木ドラ25「Re:Mind」がスタート。
-
- <br><br>
-
-ドラマの撮影をしながら精力的に「ひらがな全国ツアー2017」は続き、福岡公演を経て12/12、13には幕張メッセイベントホール2daysファイナル公演を開催。初めて二期生を迎えた20人でのパフォーマンスは、ハッピーオーラ全開で大絶賛の中、ツアーは幕を閉じた。
-
- <br><br>
-
-2018年に入り、1月30日、31日、2月1日の3日間、欅坂46とけやき坂46で行う予定だった日本武道館公演が、諸事情によりひらがなの3days公演となる。突然の大きな舞台に不安を抱えながらのリハーサルの中、なんとチケットが即完、「私たちにも待っててくれる人がいる」と不安を振り払い、単独3days公演を大成功で終える。この日本武道館公演の最終日にサプライズとしてひらがなけやき単独アルバムのリリースが発表され、メンバー一同、涙のステージとなった。
-<br><br>
- 
-
-2月12日、ひらがなけやき二期生9名による「おもてなし会」が幕張メッセイベントホールで開催され、欅坂46から始まった「おもてなし会」史上最多の7,000人を動員、二期生も本格的に活動し始める。
-
- <br><br>
-
-4月には待望のレギュラー番組「ひらがな推し」（毎週日曜日25:05～テレビ東京にてオンエア）がスタート、さらには「KEYABINGO!4」にもひらがなけやき単独で出演、ゴールデンウィークにはAiiAシアターにてひらがなけやき全員出演による初の舞台「あゆみ」を行うなど精力的に活動する。
-
- <br><br>
-
-6月1日、メンバー影山優佳が学業のため一時活動休止が発表される、
-
- <br><br>
-
-6月3日、SHOWROOMにて佐々木久美のキャプテン就任が発表され、20日には遂にデビューアルバム「走り出す瞬間」が発売、オリコンウィークリーチャート1位を獲得、アルバムレコ発ツアーとなる「走り出す瞬間ツアー2018」では、5ヶ所10公演、約5万人を動員するツアーとなった。
-
- <br><br>
-
-8月にはTBS赤坂ACTシアターにて行われた「舞台 マギアレコード 魔法少女まどか☆マギカ外伝」に潮紗理菜、柿崎芽実、加藤史帆、齊藤京子、佐々木美玲、金村美玖、河田陽菜、富田鈴花、丹生明里、渡邉美穂が出演。
-<br>
- <br>
-
-10月には日本武道館にて行われたHOTSTUFF40周年記念イベントできゃりーぱみゅぱみゅと共演、日本武道館をホームのように盛り上げた。
-<br>
- <br>
-
-11月には大阪城ホールにて行われた関テレ「MUJACK」イベントに出演、さらにはTOKYO DOME CITY HALLにて行われた舞台「ザンビ」に、TEAM REDとして齊藤京子、小坂菜緒、TEAM BLUEとして柿崎芽実、加藤史帆が出演、坂道3グループが共演する初の舞台となった。
-
- <br>
-<br>
-また、この夏に行なわれた「坂道合同オーディション」にて合格したメンバーの中から、11月29日にグループ配属が発表、ひらがなけやきには1名、三期生として上村ひなのが配属となる。一期生、二期生メンバーは、伝説の「ドッキリ」で上村を迎え入れた。
-
- <br><br>
-
-12月10日には日本武道館にて、欅坂46二期生＋けやき坂46三期生合同の「お見立て会」が開催され、上村にとって初のステージとなった。
-<br>
- <br>
-
-翌11日、12日、13日の3日間は日本武道館にて「ひらがなくりすます2018」を開催、1年間で7日間日本武道館でパフォーマンスするという快挙を成し遂げ、2018年を締めくくった。
-<br>
- <br>
-
-2019年、2月に銀河劇場にて舞台「ザンビ～Theater‘s end～」が開演、TEAM BLACKとして潮紗理菜、TEAM YELLOWとして松田好花、TEAM GREENとして佐々木久美が出演。
-
- <br><br>
-
-2月11日、「ひらがなからのおしらせ」としてSHOWROOM配信を実施、3月27日の単独デビューを発表。その後、メンバーへのサプライズとしてグループ名の改名が発表され、けやき坂46は「日向坂46（ひなたざかふぉーてぃーしっくす）」として生まれ変わった。
-<br>
- <br>
-
-遠回りをしながらも、少しずつ坂を上って、ようやくスタートに辿り着いた日向坂46。
-
- <br><br>
-
-シングルデビューに向けて、日向坂46は、新たな坂道を上り始める。<br><br>
+日向坂46は欅坂46の公式シスターグループとして結成したアイドルグループです。デビューの前に日向坂46は「けやきざか46（ひらがな欅坂46）」として知られています。2019年２月11日でデビューシングルは「キュン」を発売されました。<br>
+			<br>
+			日向坂46のメンバー：<br>
+			1期生：<br>
+			<div class="kontenmember">
+				<ul>
+					<li><a title="Iguchi Mao"><img src="http://stage48.net/wiki/images/thumb/6/6a/IguchiMaoHinatazaka46.jpg/110px-IguchiMaoHinatazaka46.jpg" width="133" height="133" /></a><br>
+					井口 眞緒</li>
+					<li><a title="Ushio Sarina"><img src="http://stage48.net/wiki/images/thumb/4/47/UshioSarinaHinatazaka46.jpg/110px-UshioSarinaHinatazaka46.jpg" width="133" height="133" /></a><br>
+					潮 紗理菜</li>
+					<li><a title="Kageyama Yuuka"><img src="http://stage48.net/wiki/images/thumb/9/92/KageyamaYuuka1stAlbum.jpg/110px-KageyamaYuuka1stAlbum.jpg" width="110" height="133" /></a><br>
+					影山 優佳</li>
+					<li><a title="Kato Shiho"><img src="http://stage48.net/wiki/images/thumb/c/ca/KatoShihoHinatazaka46.jpg/110px-KatoShihoHinatazaka46.jpg" width="133" height="133" /></a><br>
+					加藤 史帆</li>
+					<li><a title="Saito Kyoko"><img src="http://stage48.net/wiki/images/thumb/d/de/SaitoKyokoHinatazaka46.jpg/110px-SaitoKyokoHinatazaka46.jpg" width="133" height="133" /></a><br>
+					齊藤 京子</li>
+					<li><a title="Sasaki Kumi"><img src="http://stage48.net/wiki/images/thumb/e/ee/SasakiKumiHinatazaka46.jpg/110px-SasakiKumiHinatazaka46.jpg" width="133" height="133" /></a><br>
+					佐々木 久美</li>
+					<li><a title="Sasaki Mirei"><img src="http://stage48.net/wiki/images/thumb/4/45/SasakiMireiHinatazaka46.jpg/110px-SasakiMireiHinatazaka46.jpg" width="133" height="133" /></a><br>
+					佐々木 美玲</li>
+					<li><a title="Takase Mana"><img src="http://stage48.net/wiki/images/thumb/0/09/TakaseManaHinatazaka46.jpg/110px-TakaseManaHinatazaka46.jpg" width="133" height="133" /></a><br>
+					高瀬 愛奈</li></ul><ul>
+					<li><a title="Takamoto Ayaka"><img src="http://stage48.net/wiki/images/thumb/b/ba/TakamotoAyakaHinatazaka46.jpg/110px-TakamotoAyakaHinatazaka46.jpg" width="133" height="133" /></a><br>
+					高本 彩花</li>
+					<li><a title="Higashimura Mei"><img src="http://stage48.net/wiki/images/thumb/4/4f/HigashimuraMeiHinatazaka46.jpg/110px-HigashimuraMeiHinatazaka46.jpg" width="133" height="133" /></a><br>
+					東村 芽依</li>
+				</ul>
+			</div>
+				2期生：<br>
+			<div class="kontenmember">
+				<ul>
+					<li><a title="Kanemura Miku"><img src="http://stage48.net/wiki/images/thumb/d/d2/KanemuraMikuHinatazaka46.jpg/110px-KanemuraMikuHinatazaka46.jpg" width="133" height="133" /></a><br>
+					金村美玖</li>
+					<li><a title="Kawata Hina"><img src="http://stage48.net/wiki/images/thumb/b/b0/KawataHinaHinatazaka46.jpg/110px-KawataHinaHinatazaka46.jpg" width="133" height="133" /></a><br>
+					河田陽菜</li>
+					<li><a title="Kosaka Nao"><img src="http://stage48.net/wiki/images/thumb/7/7f/KosakaNaoHinatazaka46.jpg/110px-KosakaNaoHinatazaka46.jpg" width="133" height="133" /></a><br>
+					小坂菜緒</li>
+					<li><a title="Tomita Suzuka"><img src="http://stage48.net/wiki/images/thumb/1/1f/TomitaSuzukaHinatazaka46.jpg/110px-TomitaSuzukaHinatazaka46.jpg" width="133" height="133" /></a><br>
+					富田鈴花</li>
+					<li><a title="Nibu Akari"><img src="http://stage48.net/wiki/images/thumb/0/09/NibuAkariHinatazaka46.jpg/110px-NibuAkariHinatazaka46.jpg" width="133" height="133" /></a><br>
+					丹生明里</li>
+					<li><a title="Hamagishi Hiyori"><img src="http://stage48.net/wiki/images/thumb/4/4b/HamagishiHiyoriHinatazaka46.jpg/110px-HamagishiHiyoriHinatazaka46.jpg" width="133" height="133" /></a><br>
+					濱岸ひより</li>
+					<li><a title="Matsuda Konoka"><img src="http://stage48.net/wiki/images/thumb/3/3a/MatsudaKonokaHinatazaka46.jpg/110px-MatsudaKonokaHinatazaka46.jpg" width="133" height="133" /></a><br>
+					松田好花</li>
+					<li><a title="Miyata Manamo"><img src="http://stage48.net/wiki/images/thumb/4/4e/MiyataManamoHinatazaka46.jpg/110px-MiyataManamoHinatazaka46.jpg" width="133" height="133" /></a><br>
+					宮田愛萌</li></ul><ul>
+					<li><a title="Watanabe Miho"><img src="http://stage48.net/wiki/images/thumb/5/51/WatanabeMihoHinatazaka46.jpg/110px-WatanabeMihoHinatazaka46.jpg" width="133" height="133" /></a><br>
+					渡邉美穂</li>
+				</ul>
+			</div>
+				3期生：<br>
+			<div class="kontenmember">
+				<ul>
+					<li><a title="Kamimura Hinano"><img src="http://stage48.net/wiki/images/thumb/4/4a/KamimuraHinanoHinatazaka46.jpg/110px-KamimuraHinanoHinatazaka46.jpg" width="133" height="133" /></a><br>
+					上村ひなの</li>
+				</ul>
+			</div>
 <h4><a href="https://www.hinatazaka46.com/s/official/?ima=0000" class="katahinata">GO TO HINATAZAKA46 SITE</a></h4>
 </td>
 </tr>
