--- a/maknalirikgarasu.html
+++ b/maknalirikgarasu.html
@@ -40,7 +40,7 @@
 			<td>
 				<center>
 	</center>
-インドネシア語で「ガラスを割れ！」とは「Pecahkan Kaca!」という意味の言葉であり、命令的な表現を持っています。 それから、この歌でグラスを割るように言われますか？ 確かにそうではありません。<br><br>
+インドネシア語で「ガラスを割れ！」とは「Pecahkan Kaca!」という意味の言葉であり、命令的な表現を持っています。 それから、この歌でグラスを割るように言われますか？ もちろんその意味ではありません。<br><br>
 それでは、歌の議論を始めましょう<br><br>
 <table border="0">
 	<tr>
@@ -48,14 +48,14 @@
 吠えなくなってしまった犬は<br>
 餌もらうために尻尾振って<br>
 飼い慣らされたんだろう<br></td></tr></table>
-この歌詞では、飼い慣らされた「犬」を紹介しています。犬でさえ、噛む欲求を忘れているか、失いました。 「飼いならされた」は普通のようで、積極的な意味合いを持っているように見えますが、この曲では、ここで「飼いならされた」とは「抑制された」と同じ意味であるため、否定的な意味合いがあります。<br>
+この歌詞では、飼い慣らされた「犬」を紹介しています。その犬は、噛む欲求でさえを忘れるどころか、全て失ってしまいました。 「飼いならされた」は普通のようで、積極的な意味合いを持っているように見えますが、この曲では、ここで「飼いならされた」とは「抑制された」と同じ意味であるため、否定的な意味合いがあります。<br>
 <br>
 <table border="0">
 	<tr>
 		今あるしあわせにどうしてしがみつくんだ?<br>
 閉じ込められた見えない檻から抜け出せよ<br>
-この歌詞では、「今あるしゃわせ」が意味するものは本当に幸せではないので、「犬」が満足して欲張りではないというわけではありません。 しかし、「抑制されることによって作成されるしあわせ」は、もしそうなら、抑制され、彼の自由が奪われても幸せを感じることを意味します。 したがって、目に見えない閉じ込めを破りましょう。
-たとえば、友達やサークルがあります。 アイドルが好きや、Petaiを食べるのが好き、または本当に普通の物。 しかし、あなたの「友人」はアイドルが好きではないとを食べるのが好きではないので、あなたは「友人」の生活に合った幸せを探し続け、「アイドルが好きではなくてもPetaiを食べなくても幸せだ」と感じます。 あなたは抑制されることによって作成されるしあわせ、見えないケージから得られた幸福を感じました。 したがって、あなたの本当の幸せを達成することを恐れないでください。<br>
+この歌詞では、「今あるしあわせ」が意味するものは本当に幸せではないが、「犬」が満足せず欲張りであるわけではありません。 しかし、「抑制されることによって作成されるしあわせ」は、もしそうなら、抑制され、彼の自由が奪われても幸せを感じることを意味します。 したがって、目に見えない閉じ込めを破りましょう。
+たとえば、友達やサークルがあります。 アイドルが好きだったり、Petaiを食べるのが好きだったりするということは、ごく当たり前なことです。 しかし、あなたの「友人」はアイドルが好きではない、そしてPetaiを食べるのも好きではないので、あなたは「友人」の生活に合った幸せを探し続け、「アイドルが好きではなくてもPetaiを食べなくても幸せだ」と感じます。 あなたは抑制されることによって作成されるしあわせ、見えないケージから得られた幸福を感じました。 したがって、あなたの本当の幸せを手に入れることを恐れないでください。<br>
 <br>
 <table border="0">
 	<tr>
@@ -63,7 +63,7 @@
 握りしめた拳で Oh!Oh!<br>
 やりたいこと やってみせろよ<br>
 おまえはもっと自由でいい 騒げ!<br></td></tr></table>
-	この歌詞では、監禁から脱却するように言われています。「握りしめた拳で」は、あなたが力を尽くして、またはあなたが制約から抜け出し、あなたが望むことをすることができることを示します。<br>
+		この歌詞では、監禁から脱却するように言われています。「握りしめた拳で」は、あなたが力を尽くして、またはあなたが監禁から抜け出し、あなたがしたいことを実現することができることを示します。<br>
 <br>
 	<table border="0">
 	<tr>
@@ -71,13 +71,13 @@
 夢見るなら愚かになれ<br>
 傷つかなくちゃ本物じゃないよ<br></td></tr></table>
 	この歌詞では、やりたいことだけでなく、夢や理想を実現することはできません。 ここでの「愚かになれ」とは、「従わず、既存の制約を離れる」ことを意味します。
-	そして、あなたが傷つけたりしないなら、あなたの夢はまだ本物ではありません、例えば、あなたは両親に医者になることを求められますが、あなたは漫画家になりたいです、あなたの両親は確かに同意しません 夢に到達するために傷つける。 けがをしなければ、あなたの夢は本物ではない。あなたの夢でさえ、閉じ込められている、またはまだ抑制されている人々の夢かもしれません。<br>
+	そして、あなたが傷つけたりしないなら、あなたの夢はまだ本物ではありません、例えば、あなたは両親に医者になることを求められますが、あなたは漫画家になりたいです。その過程で両親があなたの夢をサポートしないからあなた自身が傷つくことになります。 けがをしなければ、あなたの夢は本物ではない。あなたの夢でさえ、閉じ込められている、またはまだ抑制されている人々の夢かもしれません。<br>
 <br>
 	<table border="0">
 	<tr>
 		<td class="kontendalam">000</td><td>リードで繋がれなくても<br>
 どこへも走り出そうとしない<br></td></tr></table>
-	この歌詞のリードの意味では「連れる」ではありませんが、意味は通常の犬の首に見られる綱です。 それは、あなたがあなたを妨げている場所にさえいなければ、あなたはまだ自由を得る勇気がないことを意味します。 たとえば、「友達」の周りでは、Petaiは食べませんが、「友達」がいない家でも、Petaiは食べません。 それはすでに緊急事態でした。<br>
+	この歌詞のリードの意味では「連れる」ではなく、通常の犬の首に見られる綱の意味です。 それは、あなたがあなたを妨げている場所にさえいなければ、あなたはまだ自由を得る勇気がないことを意味します。 たとえば、「友達」の周りでは、Petaiは食べませんが、「友達」がいない家でも、Petaiは食べません。 それはすでに緊急事態でした。<br>
 	<br>
 <table border="0">
 	<tr>
@@ -92,13 +92,13 @@
 思い込んでいるだけ Oh!Oh!<br>
 やる前からあきらめるなよ<br>
 おまえはもっとおまえらしく 生きろ!<br></td></tr></table>
-	歌詞でなぜ「想像のガラス」と呼ばれるのですか？ 実際、抑制のガラスは想像だけで、ガラスは実際にありません。自分自身を信じているのはそのガラスを破壊されるができます。 そして、あなたが何もしていなくても諦めないでください。 さらに、重要なことは「あなたの自分自身の生き方」であり、アイドルを好きになったり、Petaiを食べることを恐れる必要はありません。<br>
+	歌詞でなぜ「想像のガラス」と呼ばれるのですか？ 実際、抑制のガラスは想像だけで、ガラスは実際にありません。自分自身を信じていることはそのガラスを破壊するができます。 そして、あなたが何もしなくても諦めないでください。 さらに、重要なことは「あなたの自分自身の生き方」であり、アイドルを好きになったり、Petaiを食べたりすることを恐れる必要はありません。<br>
 	<br>
 	<table border="0">
 	<tr>
 		<td class="kontendalam">000</td><td>	愛の鎖引きちぎれよ<br>
 歯向かうなら背中向けるな<br></td></tr></table>
-	この歌詞では、「愛の鎖」とは、恋愛、ロマンス、愛情を扱っていないという意味ではありません。 しかし、「愛」を感じたいなら、あなたは認識されなければなりませんか？ それは「愛の鎖」であり、愛を得るために認められたいという欲望によって作り出された拘束であり、最終的にはそのような場合はどこにも行かないので、「愛の鎖」を手放します。 行動する前に心持てなくしないでください。
+	この歌詞では、「愛の鎖」とは、恋愛、ロマンス、愛情を扱っていないという意味ではありません。 しかし、「愛」を感じたいなら、あなたは認識されなければなりませんか？ それは「愛の鎖」であり、愛を得るために認められたいという欲望によって作り出された拘束であり、最終的にはそのような場合はどこにも行かないので、「愛の鎖」を手放します。 行動するときにはためらわないことが大事です。
 
 </h4>
 			</td>
