--- a/maknalirikgarasu.html
+++ b/maknalirikgarasu.html
@@ -52,8 +52,8 @@
 <br>
 <table border="0">
 	<tr>
-		今あるしあわせにどうしてしがみつくんだ?<br>
-閉じ込められた見えない檻から抜け出せよ<br>
+		<td class="kontendalam">000</td><td>今あるしあわせにどうしてしがみつくんだ?<br>
+閉じ込められた見えない檻から抜け出せよ<br></td></tr></table>
 この歌詞では、「今あるしあわせ」が意味するものは本当に幸せではないが、「犬」が満足せず欲張りであるわけではありません。 しかし、「抑制されることによって作成されるしあわせ」は、もしそうなら、抑制され、彼の自由が奪われても幸せを感じることを意味します。 したがって、目に見えない閉じ込めを破りましょう。
 たとえば、友達やサークルがあります。 アイドルが好きだったり、Petaiを食べるのが好きだったりするということは、ごく当たり前なことです。 しかし、あなたの「友人」はアイドルが好きではない、そしてPetaiを食べるのも好きではないので、あなたは「友人」の生活に合った幸せを探し続け、「アイドルが好きではなくてもPetaiを食べなくても幸せだ」と感じます。 あなたは抑制されることによって作成されるしあわせ、見えないケージから得られた幸福を感じました。 したがって、あなたの本当の幸せを手に入れることを恐れないでください。<br>
 <br>
